# outpack-py

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pycodestyle.yml  python-app.yml
outpack/: __init__.py  config.py  filestore.py  hash.py  root.py
src/orderly/: read.py
src/outpack/: __about__.py
tests/: test_config.py  test_filestore.py  test_hash.py  test_outpack.py  test_root.py  test_util.py
