[tool.poetry]
name = "outpack"
version = "0.1.0"
description = ""
authors = ["Rich FitzJohn <r.fitzjohn@imperial.ac.uk>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/mrc-ide/outpack-py"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pycodestyle = "^2.8.0"
coverage = {extras = ["toml"], version = "^6.3.2"}
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
